[project]
name = "dsa"
version = "0.1.0"
description = "Collection of data structure and algorithm implementations with test cases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0.0",            # Unit testing for algorithms [web:6]
    "black>=24.0.0",            # Code formatting [web:7]
    "mypy>=1.7.0",              # Type checking [web:7]
    "typing-extensions>=4.10.0",# Latest type features [web:7]
    "matplotlib>=3.8.0",        # Visualization [web:7]
    "seaborn>=0.13.0",          # Statistical plots [web:7]
    "numpy>=1.26.0",            # Efficient arrays and math ops [web:6]
    "networkx>=3.2.0",          # Graph algorithms [web:7]
    "rich>=13.7.0",             # Pretty terminal outputs [web:7]
    "tabulate>=0.9.0"           # Table formatting for outputs [web:7]
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
addopts = "-v"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

